<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/view_main_background"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/view_1"
        app:layout_constraintTop_toTopOf="@id/view_1">


        <TextView
            android:text="@string/user"
            style="@style/Text_view"
            />

        <EditText
            android:autofillHints="@string/Email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            style="@style/Edit_text"
            />

        <TextView
            android:text="@string/password"
            style="@style/Text_view" />

        <EditText
            android:hint="@string/password_stars"
            android:inputType="textPassword"
            style="@style/Edit_text" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remember" />

        <Button
            android:id="@+id/btn_loguin_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/loguin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_resgister_main"
            android:text="@string/resister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_remember_main"
            android:text="@string/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>